--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,12 +16,18 @@
     "clients/vscode/dist": true,
     "clients/vscode/node_modules/": true,
     "clients/vscode/package-lock.json": true,
-    ".venv/": true,
+    ".venv/": true
   },
   // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
   "typescript.tsc.autoDetect": "off",
   "[typescript]": {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
+  },
+  "[cpp]": {
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "llvm-vs-code-extensions.vscode-clangd"
+  },
+  "cmake.generator": "Ninja",
+  "clangd.arguments": ["--compile-commands-dir=${workspaceFolder}/build/win64-debug"]
 }
